test: 기존의 테스트 환경에 Encrypter 관련 빈 등록
- AttributeConvertor를 사용하면서, 암호화 관련 의존성도 필요하게 됨.
- 이에 따라 빈을 등록해줌.